--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "ultramind",
   "version": "1.0.0",
   "main": "index.js",
@@ -6,8 +6,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "@google/generative-ai": "^0.1.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^2.0.2",
+    "pdf-parse": "^2.4.5"
   }
 }
